# flask-email-scheduler

./: README.md
backend/: README.md  init_db.py  pyproject.toml  requirements.txt  run.py
backend/src/: __init__.py  init_db.py  main.py  models.py  routes.py
backend/src/config/: db.py
backend/src/db/: email.py
backend/src/instance/: emails.db
backend/src/routes/: emailRoute.py
backend/src/services/: email_crud.py  email_scheduler.py
backend/tests/: all_test.py
frontend/: README.md  app.vue  nuxt.config.ts  package.json
frontend/components/: AddEmailDialog.vue  EmailTable.vue  SchedulerSwitch.vue
frontend/plugins/: toast.client.ts
