[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["qsaifudin <duafinis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
