[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["qsaifudin <duafinis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
sqlalchemy = "^2.0.25"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
celery = "^5.3.6"
pytz = "^2024.1"
flower = "^2.0.1"

[tool.poetry.scripts]
start = "my_package.log_revision:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
